# PyUDP

./: README.md  pyproject.toml  setup.py
src/pyudp/: __init__.py  client.py  multicast_client.py  multicast_server.py  server.py
src/pyudp/utils/: __init__.py  replacing_queue.py
tests/: test_multicast_client.py  test_multicast_server.py  test_udp_client.py  test_udp_server.py
